# aur-updater

./: CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: package-update.yml  release.yml
examples/: packages.toml
examples/aur/openai-codex-bin/: .SRCINFO  PKGBUILD
examples/aur/openai-codex-git/: .SRCINFO  PKGBUILD
examples/aur/openai-codex-npm/: .SRCINFO  PKGBUILD
src/: arch.rs  cli.rs  config.rs  lib.rs  main.rs  pkgbuild.rs  telemetry.rs  updater.rs
src/sources/: git.rs  github.rs  mod.rs  npm.rs  version_template.rs
