[package]
name = "aur-updater"
version = "0.3.0"
edition = "2024"
authors = ["kralonur"]
description = "AUR package updater with multi source support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kralonur/aur-updater"
keywords = ["aur", "arch-linux", "pkgbuild", "package-manager"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.3"
regex = "1.12.3"
reqwest = { version = "0.13.3", default-features = false, features = [
    "blocking",
    "json",
    "rustls",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
